[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicostmanager"
version = "0.1.0"
description = "Python SDK for the AICostManager API"
authors = [{name = "AICostManager", email = "support@aicostmanager.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://aicostmanager.com"
Source = "https://github.com/aicostmanager/aicostmanager"

[tool.setuptools.packages.find]
where = ["aicostmanager"]

[tool.pytest.ini_options]
addopts = "-v"
