[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicostmanager"
version = "0.1.0"
description = "Python SDK for the AICostManager API"
authors = [{name = "AICostManager", email = "support@aicostmanager.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32",
    "pydantic>=2.0",
    "httpx>=0.27",
    "PyJWT>=2.0.0",
    "tenacity>=9.0.0",
    "cryptography>=45.0.5",
]

[project.urls]
Homepage = "https://aicostmanager.com"
Source = "https://github.com/aicostmanager/aicostmanager"

[tool.setuptools.packages.find]
where = ["aicostmanager"]

[tool.pytest.ini_options]
addopts = "-v"

[dependency-groups]
test = [
    "openai>=1.97.1",
    "pytest>=8.3.5",
    "python-dotenv>=1.0.1",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.0",
    "boto3>=1.34.0",
]
